# uefi-bpb-rs

./: .gitignore  Cargo.toml  README.md  TODO  build.sh  run_hda.sh
.cargo/: config
BpbPkg/: BpbPkg.dsc  build.sh
BpbPkg/BpbDxe/: Bpb.c  BpbDxe.inf
linux/lsefi/: Makefile  lsefi.c
linux/lsefi-mod/: Makefile  mod.c
scripts/: gather-disk.sh  mkdisk.sh  nbd-mkdisk.sh  update-disk.sh
src/: acpi.rs  main.rs
win32/bpb/sys/: bpb.c  bpb.inf  bpb.vcxproj  bpb.vcxproj.filters  e820.c
win32/bpbpnp/acpi/: ssdt_bpb.dsl
win32/bpbpnp/sys/: bpbpnp.inx  bpbpnp.rc  bpbpnp.sln  bpbpnp.vcxproj  bpbpnp.vcxproj.filters  common.h  device.c  device.h  driver.c  driver.h  payload.c  payload.h  trace.h
win32km/: bpb.c  bpb.h  bpb.sln  bpb.vcxproj  bpb.vcxproj.filters  e820.h
win32km/x64/Debug/bpb/: bpb.inf
